# tesi

./: .gitignore  note.txt
gold-4.6/config_gold-4.6.0/INI/: Dummy.ini  sessions.ini
models/: DPM_4compRGB.txt  DPM_4comp_RGB.mat  kitti1000.txt  kitti2000.txt  kitti500.txt  kitti6002.txt  miomodello.txt
risultati/detectionsFFLD/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+961 more)
risultati/tutti/1000interval10/: .~lock.mAP coparison 10vs2.ods#  mAP coparison 10vs2.ods
testi/: TemplatePresentazione.ppt
workspace/: wisdom.fftw
workspace/Dummy-build/: .cproject  .project  CMakeCache.txt  CPackConfig.cmake  Makefile  cmake_install.cmake  wisdom.fftw
workspace/Dummy/src/: CMakeLists.txt  HOGVisualizer.cpp  HOGVisualizer.h  dummy.cpp  dummy.h
workspace/Dummy/src/ffld/: CImageResize.cpp  CImageResize.h  Globals.h  HOGPyramid.cpp  HOGPyramid.h  Mixture.cpp  Model.cpp  Model.h  Patchwork.cpp  Rectangle.cpp  Rectangle.h  SearchRange.cpp  SearchRange.h  ffld.cpp  ffld.h
workspace/Dummy/src/ffld/result/: result.txt
workspace/Dummy/src/latentsvm/: cascadeDetector.h
workspace_backup/Dummy-build/: .project  CPackSourceConfig.cmake
(+32 files in other folders)
